Add tables to entity framework

--- a/source/RockawayWish.Database/RockawayWish.Database.csproj
+++ b/source/RockawayWish.Database/RockawayWish.Database.csproj
@@ -59,7 +59,22 @@
     <Compile Include="AspNetUserLogin.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="ContactU.cs">
+      <DependentUpon>RockawayWishDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="C__MigrationHistory.cs">
+      <DependentUpon>RockawayWishDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Due.cs">
+      <DependentUpon>RockawayWishDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Event.cs">
+      <DependentUpon>RockawayWishDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventLocation.cs">
+      <DependentUpon>RockawayWishDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PaymentType.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,7 +96,13 @@
       <DependentUpon>RockawayWishDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Services\DuesService.cs" />
+    <Compile Include="State.cs">
+      <DependentUpon>RockawayWishDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="sysdiagram.cs">
+      <DependentUpon>RockawayWishDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UsersDue.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
   </ItemGroup>
