--- a/source/RockawayWish.Database/RockawayWish.Database.csproj
+++ b/source/RockawayWish.Database/RockawayWish.Database.csproj
@@ -59,23 +59,25 @@
     <Compile Include="AspNetUserLogin.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="ContactU.cs">
+    <Compile Include="ContactUs.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
     <Compile Include="C__MigrationHistory.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="Due.cs">
+    <Compile Include="Dues.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="Event.cs">
+    <Compile Include="EventLocations.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="EventLocation.cs">
+    <Compile Include="Events.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="Events.cs" />
     <Compile Include="PaymentType.cs">
+      <DependentUpon>RockawayWishDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PaymentTypes.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -97,7 +99,7 @@
       <DependentUpon>RockawayWishDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Services\DuesService.cs" />
-    <Compile Include="State.cs">
+    <Compile Include="States.cs">
       <DependentUpon>RockawayWishDB.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagram.cs">
