--- a/source/RockawayWish.Database/App.Config
+++ b/source/RockawayWish.Database/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="RockawayWishDBContext" connectionString="metadata=res://*/RockawayWishDB.csdl|res://*/RockawayWishDB.ssdl|res://*/RockawayWishDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQL2K12;initial catalog=RockawayWish;user id=rockawaywish_user;password=rockawaywish_user;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="RockawayWishDBContainer" connectionString="metadata=res://*/RockawayWishDB.csdl|res://*/RockawayWishDB.ssdl|res://*/RockawayWishDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQL2K12;initial catalog=RockawayWish;user id=rockawaywish_user;password=rockawaywish_user;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="RockawayWishDBContext" connectionString="metadata=res://*/RockawayWishDB.csdl|res://*/RockawayWishDB.ssdl|res://*/RockawayWishDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQL2K12;initial catalog=RockawayWish;user id=rockawaywish_user;password=rockawaywish_user;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
