--- a/source/Rockawish.Models/RockawayWish.Models.csproj
+++ b/source/Rockawish.Models/RockawayWish.Models.csproj
@@ -45,6 +45,7 @@
     <Compile Include="PaymentTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserDues.cs" />
+    <Compile Include="UserModels.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
