--- a/source/RockawayWish.Web/Web.config
+++ b/source/RockawayWish.Web/Web.config
@@ -4,22 +4,20 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-RockawayWish.Web-20160628042219.mdf;Initial Catalog=aspnet-RockawayWish.Web-20160628042219;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  
+    <add key="Interactive-Membership-ApiKey" value="7f9b603a-a2ac-4373-a069-c0d20c29843a" />
+    <add key="Interactive-Membership-AppId" value="13A6F14D-7B2B-4266-AB7D-A11DF2AFEB07" />
+    <add key="Interactive-Membership-Endpoint" value="https://interactivemembership.tiradointeractive.com" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms" >
+      <forms protection="All" loginUrl="/account/login" requireSSL="false" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
@@ -27,7 +25,7 @@
     <validation validateIntegratedModeConfiguration="false" />
 
     <modules runAllManagedModulesForAllRequests="true">
-      <remove name="FormsAuthentication" />
+      <!--<remove name="FormsAuthentication" />-->
     </modules>
   </system.webServer>
   <runtime>
@@ -74,10 +72,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
+  
 </configuration>
