--- a/source/RockawayWish.Web/Web.config
+++ b/source/RockawayWish.Web/Web.config
@@ -4,30 +4,64 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  
-    <add key="Interactive-Membership-ApiKey" value="7f9b603a-a2ac-4373-a069-c0d20c29843a" />
-    <add key="Interactive-Membership-AppId" value="13A6F14D-7B2B-4266-AB7D-A11DF2AFEB07" />
-    <add key="Interactive-Membership-Endpoint" value="https://interactivemembership.tiradointeractive.com" />
-  </appSettings>
+
+  <appSettings configSource="app.config" />
+
   <system.web>
-    <authentication mode="Forms" >
-      <forms protection="All" loginUrl="/account/login" requireSSL="false" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
-    </authentication>
+
+    <!-- Framework security fix for /nul directory -->
+    <!-- Allow zombie DOS names to be captured by ASP.NET (/con, /com1, /lpt1, /aux, /prt, /nul, etc) -->
+    <httpRuntime targetFramework="4.5" relaxedUrlToFileSystemMapping="true" enableVersionHeader="false" />
+
+    <!-- Set Http Cookies -->
+    <httpCookies httpOnlyCookies="true" requireSSL="true" />
+
+    <!-- Set Custom Errors -->
+    <customErrors mode="On" defaultRedirect="~/Error/PageNotFound">
+      <error statusCode="404" redirect="~/Error/PageNotFound" />
+    </customErrors>
+
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+
+    <!-- Set Forms Authentication -->
+    <authentication mode="Forms">
+      <forms protection="All" requireSSL="true" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
+    </authentication>
+
   </system.web>
+
+
   <system.webServer>
+
     <validation validateIntegratedModeConfiguration="false" />
 
-    <modules runAllManagedModulesForAllRequests="true">
-      <!--<remove name="FormsAuthentication" />-->
-    </modules>
+    <modules runAllManagedModulesForAllRequests="true" />
+
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,POST" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,POST" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,POST" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+
+    <staticContent>
+      <mimeMap fileExtension=".webm" mimeType="video/webm" />
+      <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
+
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
+        <add name="Strict-Transport-Security" value="max-age=16070400; includeSubDomains" />
+      </customHeaders>
+    </httpProtocol>
+
   </system.webServer>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
