--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -9,9 +9,20 @@
   <add key="Interactive-Membership-ApiKey" value="7f9b603a-a2ac-4373-a069-c0d20c29843a" />
   <add key="Interactive-Membership-AppId" value="13A6F14D-7B2B-4266-AB7D-A11DF2AFEB07" />
   <add key="Interactive-Membership-Endpoint" value="http://local.interactivemembership.tiradointeractive.com" />
-  <!--<add key="Interactive-Membership-AdminKey" value="4183CD09-7072-4453-B0EC-1092130A3760" />-->
-
   <!-- real admin key -->
   <!--<add key="Interactive-Membership-AdminKey" value="4183CD09-7072-4453-B0EC-1092130A3760" />-->
+
+  <add key="SMTP-Host" value="smtp.gmail.com" />
+  <add key="SMTP-UserName" value="info@rockawaywish.org" />
+  <add key="SMTP-Password" value="Rockaway1*" />
+  <add key="SMTP-Port" value="587" />
+  <add key="SMTP-FromAddress" value="info@rockawaywish.org" />
+  <add key="SMTP-FromName" value="WISH of Rockaway" />
+  <add key="SMTP-EnableSSL" value="true" />
+  <add key="SMTP-UseDefaultCredentials" value="false" />
+
+  <add key="ResetPassword-Endpoint" value="https://local.rockawaywish.org/account/resetpassword" />
+  <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
+
 
 </appSettings>
