--- a/source/RockawayWish.Web/Web.prod.config
+++ b/source/RockawayWish.Web/Web.prod.config
@@ -14,7 +14,7 @@
     <httpRuntime targetFramework="4.5" relaxedUrlToFileSystemMapping="true" enableVersionHeader="false" />
 
     <!-- Set Http Cookies -->
-    <httpCookies httpOnlyCookies="true" requireSSL="false" />
+    <httpCookies httpOnlyCookies="true" requireSSL="true" />
 
     <!-- Set Custom Errors -->
     <customErrors mode="On" defaultRedirect="~/Error/PageNotFound">
@@ -25,7 +25,7 @@
 
     <!-- Set Forms Authentication -->
     <authentication mode="Forms">
-      <forms protection="All" requireSSL="false" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
+      <forms protection="All" requireSSL="true" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
     </authentication>
 
   </system.web>
@@ -47,9 +47,13 @@
     </handlers>
 
     <staticContent>
+      <remove fileExtension=".webm" />
       <mimeMap fileExtension=".webm" mimeType="video/webm" />
+      <remove fileExtension=".mp4" />
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+      <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <remove fileExtension=".json" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
     </staticContent>
 
@@ -63,21 +67,21 @@
     <rewrite>
       <rules>
         <clear />
-        <rule name="Redirect to HTTP" stopProcessing="true">
+        <!--<rule name="Redirect to HTTP" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{R:1}" pattern="^onepage/(.*)$" negate="true" />
             <add input="{HTTPS}" pattern="^ON$" />
           </conditions>
           <action type="Redirect" url="http://{HTTP_HOST}/{R:0}" redirectType="Permanent" />
-        </rule>
-        <!--<rule name="HTTPS to HTTP redirect2" stopProcessing="true">
+        </rule>-->
+        <rule name="HTTPS to HTTP redirect2" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{HTTPS}" pattern="off" ignoreCase="true" />
           </conditions>
           <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{R:1}" />
-        </rule>-->
+        </rule>
       </rules>
     </rewrite>
 
