--- a/source/RockawayWish.Web/Web.config
+++ b/source/RockawayWish.Web/Web.config
@@ -53,8 +53,11 @@
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff" />
       <remove fileExtension=".json" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
+
     </staticContent>
 
     <httpProtocol>
@@ -75,13 +78,13 @@
           </conditions>
           <action type="Redirect" url="http://{HTTP_HOST}/{R:0}" redirectType="Permanent" />
         </rule>-->
-        <rule name="HTTPS to HTTP redirect2" stopProcessing="true">
+        <!--<rule name="HTTPS to HTTP redirect2" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{HTTPS}" pattern="off" ignoreCase="true" />
           </conditions>
           <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{R:1}" />
-        </rule>
+        </rule>-->
       </rules>
     </rewrite>
 
