--- a/source/RockawayWish.Web/Web.config
+++ b/source/RockawayWish.Web/Web.config
@@ -25,7 +25,7 @@
 
     <!-- Set Forms Authentication -->
     <authentication mode="Forms">
-      <forms protection="All" requireSSL="true" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
+      <forms protection="All" requireSSL="true" defaultUrl="~/signin" cookieless="UseCookies" slidingExpiration="true" timeout="4320" />
     </authentication>
 
   </system.web>
@@ -78,13 +78,13 @@
           </conditions>
           <action type="Redirect" url="http://{HTTP_HOST}/{R:0}" redirectType="Permanent" />
         </rule>-->
-        <!--<rule name="HTTP to HTTPS redirect" stopProcessing="true">
+        <rule name="HTTP to HTTPS redirect" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{HTTPS}" pattern="off" ignoreCase="true" />
           </conditions>
           <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{R:1}" />
-        </rule>-->
+        </rule>
       </rules>
     </rewrite>
 
