--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -21,7 +21,7 @@
   <add key="SMTP-EnableSSL" value="true" />
   <add key="SMTP-UseDefaultCredentials" value="false" />
 
-  <add key="ResetPassword-Endpoint" value="https://local.rockawaywish.org/account/resetpassword" />
+  <add key="ResetPassword-Endpoint" value="https://local.rockawaywish.org/resetpassword" />
   <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
 
 
