--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -23,6 +23,8 @@
 
   <add key="ResetPassword-Endpoint" value="https://local.rockawaywish.org/resetpassword" />
   <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
+  <add key="ResetPassword-ContactLink" value="https://local.rockawaywish.org/contact-wish" />
 
+  <add key="PayPal-2016-DuesId" value="T844VV3P9R2JW" />
 
 </appSettings>
