--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -23,5 +23,6 @@
 
   <add key="ResetPassword-Endpoint" value="https://rockawaywish.tiradointeractive.com/resetpassword" />
   <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
+  <add key="ResetPassword-ContactLink" value="https://rockawaywish.tiradointeractive.com/contact-wish" />
 
 </appSettings>
