--- a/source/RockawayWish.Web/Web.prod.config
+++ b/source/RockawayWish.Web/Web.prod.config
@@ -17,9 +17,11 @@
     <httpCookies httpOnlyCookies="true" requireSSL="true" />
 
     <!-- Set Custom Errors -->
-    <customErrors mode="On" defaultRedirect="~/Error/PageNotFound">
+    <customErrors mode="Off" defaultRedirect="~/Error/PageNotFound">
       <error statusCode="404" redirect="~/Error/PageNotFound" />
     </customErrors>
+
+    <trust level="Full"/>
 
     <compilation debug="true" targetFramework="4.5" />
 
