--- a/source/RockawayWish.Web/app.config
+++ b/source/RockawayWish.Web/app.config
@@ -12,6 +12,11 @@
   <!-- real admin key -->
   <!--<add key="Interactive-Membership-AdminKey" value="4183CD09-7072-4453-B0EC-1092130A3760" />-->
 
+
+  <add key="Membership-Admin-Url" value="https://local.admin.interactivemembership.tiradointeractive.com" />
+  <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
+  <add key="Membership-Admin-Name" value="Richard Tirado" />
+
   <add key="SMTP-Host" value="smtp.gmail.com" />
   <add key="SMTP-UserName" value="info@rockawaywish.org" />
   <add key="SMTP-Password" value="Rockaway1*" />
