--- a/source/RockawayWish.Web/app.prod.config
+++ b/source/RockawayWish.Web/app.prod.config
@@ -12,6 +12,10 @@
   <!-- real admin key -->
   <!--<add key="Interactive-Membership-AdminKey" value="4183CD09-7072-4453-B0EC-1092130A3760" />-->
 
+  <add key="Membership-Admin-Url" value="https://rockawaywishadmin.tiradointeractive.com" />
+  <add key="Membership-Admin-Email" value="richie@tiradointeractive.com" />
+  <add key="Membership-Admin-Name" value="Richard Tirado" />
+
   <add key="SMTP-Host" value="smtp.gmail.com" />
   <add key="SMTP-UserName" value="info@rockawaywish.org" />
   <add key="SMTP-Password" value="Rockaway1*" />
@@ -21,8 +25,9 @@
   <add key="SMTP-EnableSSL" value="true" />
   <add key="SMTP-UseDefaultCredentials" value="false" />
 
-  <add key="ResetPassword-Endpoint" value="https://rockawaywish.tiradointeractive.com/resetpassword" />
+  <add key="ResetPassword-Endpoint" value="https://rockawaywish.org/resetpassword" />
   <add key="ResetPassword-Subject" value="Forget your password at rockawaywish.org?" />
-  <add key="ResetPassword-ContactLink" value="https://rockawaywish.tiradointeractive.com/contact-wish" />
+  <add key="ResetPassword-ContactLink" value="https://rockawaywish.org/contact-wish" />
 
+  <add key="PayPal-2016-DuesId" value="T844VV3P9R2JW" />
 </appSettings>
