--- a/source/RockawayWish.Web/Web.config
+++ b/source/RockawayWish.Web/Web.config
@@ -70,22 +70,14 @@
     <rewrite>
       <rules>
         <clear />
-        <!--<rule name="Redirect to HTTP" stopProcessing="true">
-          <match url="(.*)" />
-          <conditions>
-            <add input="{R:1}" pattern="^onepage/(.*)$" negate="true" />
-            <add input="{HTTPS}" pattern="^ON$" />
-          </conditions>
-          <action type="Redirect" url="http://{HTTP_HOST}/{R:0}" redirectType="Permanent" />
-        </rule>
-        <rule name="HTTP to HTTPS redirect" stopProcessing="true">
+        <rule name="HTTP to HTTPS" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{HTTPS}" pattern="off" ignoreCase="true" />
           </conditions>
           <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{R:1}" />
-        </rule>-->
-        </rules>
+        </rule>
+      </rules>
     </rewrite>
 
   </system.webServer>
